--- a/app/globals.css
+++ b/app/globals.css
@@ -12,7 +12,7 @@
 
 @font-face {
   font-family: 'Blender Pro';
-  src: url('/fonts/blender_pro/BlenderPro-Medum.woff2') format('woff2');
+  src: url('/fonts/blender_pro/BlenderPro-Medium.woff2') format('woff2');
   font-weight: 500;
   font-style: normal;
 }
@@ -40,6 +40,7 @@
 
 body {
   font-family: 'Blender Pro', sans-serif;
+  @apply bg-black
 }
 
 .after-link-line {
@@ -55,7 +56,7 @@ body {
   left: 0;
   width: 0%;
   height: 2px;
-  background-color: #000;
+  background-color: white;
   transition: width 0.3s ease;
 }
 
