--- a/app/globals.css
+++ b/app/globals.css
@@ -67,22 +67,28 @@ body {
 .after-link-line:hover::after {
   width: 100%;
 }
+
 /* Estilo para el thumb de la scrollbar */
 .scrollbar::-webkit-scrollbar-thumb {
-  background-color: #000; /* color azul */
-  border-radius: 9999px; /* completamente redondeado */
+  background-color: #000;
+  /* color azul */
+  border-radius: 9999px;
+  /* completamente redondeado */
 }
 
 /* Estilo para la pista de la scrollbar */
 .scrollbar::-webkit-scrollbar-track {
-  background-color: #cccccc; /* color azul más claro */
-  border-radius: 9999px; /* completamente redondeado */
+  background-color: #cccccc;
+  /* color azul más claro */
+  border-radius: 9999px;
+  /* completamente redondeado */
 
 }
 
 /* Ancho de la scrollbar */
 .scrollbar::-webkit-scrollbar {
-  width: 0.5rem; /* 2 (8px) */
+  width: 0.5rem;
+  /* 2 (8px) */
 }
 
 /* Comportamiento de desplazamiento para dispositivos táctiles */
@@ -90,3 +96,6 @@ body {
   -webkit-overflow-scrolling: touch;
 }
 
+.mask-image {
+  mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 90%, rgba(0, 0, 0, 0) 100%);
+}
